[gd_scene load_steps=14 format=3 uid="uid://btfes7gv5do00"]

[ext_resource type="Script" path="res://scripts/Actividad-Juego.gd" id="1_icbs4"]
[ext_resource type="Script" path="res://scripts/Jugador.gd" id="2_ydlqv"]
[ext_resource type="Texture2D" uid="uid://d2e0kqmcquwuo" path="res://img/icon.svg" id="3_brjh2"]
[ext_resource type="AudioStream" uid="uid://dxb6llnaj5sr5" path="res://sounds/player_hit.mp3" id="4_x2m1b"]
[ext_resource type="Script" path="res://scripts/Enem1.gd" id="5_fu4qo"]
[ext_resource type="FontFile" uid="uid://bsg7t5g7b0kqv" path="res://Gosrokan.otf" id="6_udm3b"]
[ext_resource type="StyleBox" uid="uid://tqtcfqm07ue8" path="res://EST-Boton.tres" id="7_ad7sf"]
[ext_resource type="StyleBox" uid="uid://pdto5gafe0tl" path="res://EST-BotonHover.tres" id="8_ktrru"]
[ext_resource type="StyleBox" uid="uid://cgy7vdqjw3tj" path="res://EST-BotonPresionado.tres" id="9_7of06"]

[sub_resource type="TileSet" id="TileSet_ebaq8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0fdd4"]
radius = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6ce1"]
size = Vector2(64, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ov3bv"]

[node name="Juego" type="Node2D"]
script = ExtResource("1_icbs4")

[node name="GridMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ebaq8")
format = 2

[node name="Fondo" type="ColorRect" parent="."]
offset_left = -1480.0
offset_top = -896.0
offset_right = -680.0
offset_bottom = -296.0
scale = Vector2(4.76, 4.76)
color = Color(0.239216, 0.239216, 0.239216, 1)
metadata/_edit_lock_ = true

[node name="ReferenceRect" type="ReferenceRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
border_color = Color(1, 1, 1, 1)
border_width = 5.0
editor_only = false

[node name="Jugador" type="CharacterBody2D" parent="."]
position = Vector2(384, 320)
script = ExtResource("2_ydlqv")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Jugador"]
position_smoothing_enabled = true
position_smoothing_speed = 10.0
metadata/_edit_lock_ = true

[node name="DBGPos" type="Label" parent="Jugador"]
offset_left = -24.0
offset_top = -56.0
offset_right = 35.0
offset_bottom = -30.0
text = "therehr"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jugador"]
shape = SubResource("CircleShape2D_0fdd4")
metadata/_edit_lock_ = true

[node name="ActorJug" type="Sprite2D" parent="Jugador/CollisionShape2D"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_brjh2")
metadata/_edit_lock_ = true

[node name="hitPlayer" type="AudioStreamPlayer2D" parent="Jugador"]
stream = ExtResource("4_x2m1b")

[node name="Enem1" type="CharacterBody2D" parent="."]
position = Vector2(104, 158)
script = ExtResource("5_fu4qo")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Enem1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enem1/Area2D"]
shape = SubResource("RectangleShape2D_r6ce1")

[node name="spr" type="Sprite2D" parent="Enem1"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_brjh2")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enem1"]
shape = SubResource("RectangleShape2D_ov3bv")

[node name="Interfaz" type="CanvasLayer" parent="."]

[node name="FondoPerdida" type="ColorRect" parent="Interfaz"]
visible = false
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.12549, 0.12549, 0.12549, 0.709804)

[node name="TiempoActual" type="Label" parent="Interfaz"]
offset_left = 8.0
offset_top = 35.0
offset_right = 173.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("6_udm3b")
theme_override_font_sizes/font_size = 42
text = "00:00.00
"

[node name="Etiqueta-Tiempo" type="Label" parent="Interfaz"]
offset_left = 8.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("6_udm3b")
theme_override_font_sizes/font_size = 24
text = "Tiempo"

[node name="Perdiste" type="MarginContainer" parent="Interfaz"]
visible = false
offset_right = 800.0
offset_bottom = 600.0
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 90
theme_override_constants/margin_bottom = 50

[node name="Contenido Juego" type="VBoxContainer" parent="Interfaz/Perdiste"]
layout_mode = 2

[node name="Label" type="Label" parent="Interfaz/Perdiste/Contenido Juego"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6_udm3b")
theme_override_font_sizes/font_size = 128
text = "Te dieron!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Interfaz/Perdiste/Contenido Juego"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.57
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="Interfaz/Perdiste/Contenido Juego/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Reiniciar" type="Button" parent="Interfaz/Perdiste/Contenido Juego/VBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("6_udm3b")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("7_ad7sf")
theme_override_styles/hover = ExtResource("8_ktrru")
theme_override_styles/pressed = ExtResource("9_7of06")
text = "Reiniciar"

[node name="MarginContainer2" type="MarginContainer" parent="Interfaz/Perdiste/Contenido Juego/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Salir" type="Button" parent="Interfaz/Perdiste/Contenido Juego/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("6_udm3b")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("7_ad7sf")
theme_override_styles/hover = ExtResource("8_ktrru")
theme_override_styles/pressed = ExtResource("9_7of06")
text = "Regresar a menu
"

[node name="Container" type="Container" parent="Interfaz/Perdiste/Contenido Juego/VBoxContainer"]
layout_mode = 2

[connection signal="body_entered" from="Enem1/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="button_up" from="Interfaz/Perdiste/Contenido Juego/VBoxContainer/MarginContainer/Reiniciar" to="." method="_on_reiniciar_button_up"]
[connection signal="button_up" from="Interfaz/Perdiste/Contenido Juego/VBoxContainer/MarginContainer2/Salir" to="." method="_on_salir_button_up"]
